[tool.poetry]
name = "wriveted-api"
version = "0.4.1"
description = "Wriveted helps children find books they will love to read"
authors = ["Brian Thorne <brian@wriveted.com>", "Joshua Landy <joshua@wriveted.com>"]
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29"}
alembic = "^1.11"
structlog = "^24.1.0"
psycopg2-binary = "^2.9.6"
SQLAlchemy = "^2.0"
httpx = "^0.27"
fastapi-cloudauth = "^0.4.3"
cryptography = "^42.0"
pydantic = {extras = ["email"], version = "^2.7"}
fastapi_permissions = "^0.2.7"
gunicorn = "^22.0"
tenacity = "^8.3"
sendgrid = "^6.10"
mock = "^5.0.1"
webencodings = "^0.5.1"
google-cloud-tasks = "^2.10.4"
# Google cloud tasks assumes setuptools but doesn't explicitly depend on it
setuptools = "^69.5"
humanize = "^4.4.0"
google-cloud-storage = "^2.6.0"
pillow = "^10.0"
stripe = "^9.6"
slack-sdk = "^3.19.5"
alembic-utils = "^0.8.1"
phonenumbers = "^8.13.6"
twilio = "^8.2.1"
xmltodict = "^0.13.0"
isbnlib = "^3.10.13"
openai = "^0.28.0"
google-api-python-client = "^2.82.0"
beautifulsoup4 = "^4.12.2"
pydantic-settings = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-gcp-trace = "^1.6.0"
opentelemetry-instrumentation-httpx = "^0.45b0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
opentelemetry-instrumentation-vertexai = "^0.15.6"
opentelemetry-propagator-gcp = "^1.6.0"
opentelemetry-instrumentation-asyncpg = "^0.45b0"
opentelemetry-instrumentation-psycopg2 = "^0.45b0"


[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
black = {extras = ["jupyter"], version = "^24.3"}
google-api-python-client = "^2.66"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0"
pre-commit = "^3.3"
locust = "^2.14"
rich = "^13.3.2"


[tool.poetry.group.ml.dependencies]
jupyterlab = "^4.2"
google-cloud-aiplatform = "^1.51.0"
langchain = "^0.1.20"
langchain-google-genai = "^1.0.3"
langchain-google-vertexai = "^1.0.3"
langchain-google-community = "^1.0.3"
wikipedia = "^1.4.0"



[tool.poetry.group.dev.dependencies]
more-itertools = "^10.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
exclude = [
    "scripts",
    "tests",
    ]

# Same as Black.
line-length = 88

target-version = "py311"